added redis to characterId

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,13 +20,18 @@ FIREBASE_PRIVATE_KEY=
 # Firebase database URL
 FIREBASE_DATABASE_URL=
 
-# Redis host
+# Redis connection URL (for hosted Redis like Redis Cloud)
+# Format: redis://username:password@host:port
+# If provided, this overrides REDIS_HOST, REDIS_PORT, and REDIS_PASSWORD
+REDIS_URL=
+
+# Redis host (used if REDIS_URL is not provided)
 REDIS_HOST=localhost
 
-# Redis port
+# Redis port (used if REDIS_URL is not provided)
 REDIS_PORT=6379
 
-# Redis password
+# Redis password (used if REDIS_URL is not provided)
 REDIS_PASSWORD=
 
 # Frontend application URL
