--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "firebase-admin": "^11.11.0",
     "helmet": "^7.1.0",
     "openai": "^5.5.1",
+    "redis": "^5.5.6",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "winston": "^3.11.0"
