--- a/backend/.env.example
+++ b/backend/.env.example
@@ -82,3 +82,13 @@ JWT_SECRET=
 # Enable debug logging for AI context (default: true in development)
 # AI_DEBUG_CONTEXT=true
 
+# BullMQ Queue Configuration
+# Queue name for message processing (default: messageProcessing)
+QUEUE_NAME=messageProcessing
+
+# Worker concurrency - number of jobs to process in parallel (default: 5)
+QUEUE_CONCURRENCY=5
+
+# Maximum number of retry attempts for failed jobs (default: 3)
+QUEUE_MAX_RETRIES=3
+
