--- a/backend/.env.example
+++ b/backend/.env.example
@@ -92,3 +92,46 @@ QUEUE_CONCURRENCY=5
 # Maximum number of retry attempts for failed jobs (default: 3)
 QUEUE_MAX_RETRIES=3
 
+# Redis Cache TTL (Time-to-Live) Settings - All values in seconds
+# Default cache TTL for general caching (default: 3600 = 1 hour)
+# REDIS_TTL_DEFAULT=3600
+
+# User session cache TTL (default: 86400 = 24 hours)
+# REDIS_TTL_SESSION=86400
+
+# General short-term cache TTL (default: 300 = 5 minutes)
+# REDIS_TTL_CACHE=300
+
+# User profile cache TTL (default: 3600 = 1 hour)
+# REDIS_TTL_USER_PROFILE=3600
+
+# Character data cache TTL (default: 21600 = 6 hours)
+# REDIS_TTL_CHARACTER=21600
+
+# Conversation cache TTL (default: 1800 = 30 minutes)
+# REDIS_TTL_CONVERSATION=1800
+
+# Daily usage tracking cache TTL (default: 86400 = 24 hours)
+# REDIS_TTL_USAGE=86400
+
+# Message batch buffer TTL (default: 600 = 10 minutes)
+# REDIS_TTL_MESSAGE_BATCH=600
+
+# Stats batch buffer TTL (default: 3600 = 1 hour)
+# REDIS_TTL_STATS_BATCH=3600
+
+# Conversation buffer TTL (default: 900 = 15 minutes)
+# REDIS_TTL_CONVERSATION_BUFFER=900
+
+# Conversation context cache TTL (default: 900 = 15 minutes)
+# REDIS_TTL_CONVERSATION_CONTEXT=900
+
+# Message list cache TTL (default: 1800 = 30 minutes)
+# REDIS_TTL_MESSAGE_LIST=1800
+
+# Queue completed job cleanup TTL (default: 86400 = 24 hours)
+# REDIS_TTL_QUEUE_COMPLETED=86400
+
+# Queue failed job cleanup TTL (default: 604800 = 7 days)
+# REDIS_TTL_QUEUE_FAILED=604800
+
